--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "test",
+  "name": "baize-seo-tool",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index"
+    "dev": "nodemon index",
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cheerio": "1.0.0-rc.12",
-    "node-cron": "^3.0.3"
+    "dotenv": "^16.4.5",
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.0"
   }
 }
