--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
