--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
