--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-    "routes": [{ "src": "(.*)", "dest": "index.js" }]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
